EPOS/Microsoft Visual Basic/Example VB 2010 64-Bit/Definitions.vb


'MasterEncoder Mode
Declare Function VCS_ActivateMasterEncoderMode Lib "EposCmd64.dll" Alias "VCS_ActivateMasterEncoderMode" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetMasterEncoderParameter Lib "EposCmd64.dll" Alias "VCS_SetMasterEncoderParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ScalingNumerator As UShort, ByVal ScalingDenominator As UShort, ByVal Polarity As Byte, ByVal MaxVelocity As UInteger, ByVal MaxAcceleration As UInteger, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetMasterEncoderParameter Lib "EposCmd64.dll" Alias "VCS_GetMasterEncoderParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pScalingNumerator As UShort, ByRef pScalingDenominator As UShort, ByRef pPolarity As Byte, ByRef pMaxVelocity As UInteger, ByRef pMaxAcceleration As UInteger, ByRef pErrorCode As UInteger) As Integer

'StepDirection Mode
Declare Function VCS_ActivateStepDirectionMode Lib "EposCmd64.dll" Alias "VCS_ActivateStepDirectionMode" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetStepDirectionParameter Lib "EposCmd64.dll" Alias "VCS_SetStepDirectionParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ScalingNumerator As UShort, ByVal ScalingDenominator As UShort, ByVal Polarity As Byte, ByVal MaxVelocity As UInteger, ByVal MaxAcceleration As UInteger, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetStepDirectionParameter Lib "EposCmd64.dll" Alias "VCS_GetStepDirectionParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pScalingNumerator As UShort, ByRef pScalingDenominator As UShort, ByRef pPolarity As Byte, ByRef pMaxVelocity As UInteger, ByRef pMaxAcceleration As UInteger, ByRef pErrorCode As UInteger) As Integer

'Inputs Outputs
'General
Declare Function VCS_GetAllDigitalInputs Lib "EposCmd64.dll" Alias "VCS_GetAllDigitalInputs" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pInputs As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetAllDigitalOutputs Lib "EposCmd64.dll" Alias "VCS_GetAllDigitalOutputs" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pOutputs As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetAllDigitalOutputs Lib "EposCmd64.dll" Alias "VCS_SetAllDigitalOutputs" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal Outputs As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetAnalogInput Lib "EposCmd64.dll" Alias "VCS_GetAnalogInput" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal Number As UShort, ByRef pAnalog As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetAnalogInputVoltage Lib "EposCmd64.dll" Alias "VCS_GetAnalogInputVoltage" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal Number As UShort, ByRef pVoltageValue As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetAnalogInputState Lib "EposCmd64.dll" Alias "VCS_GetAnalogInputState" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal Configuration As UShort, ByRef pStateValue As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetAnalogOutput Lib "EposCmd64.dll" Alias "VCS_SetAnalogOutput" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal OutputNumber As UShort, ByVal AnalogValue As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetAnalogOutputVoltage Lib "EposCmd64.dll" Alias "VCS_SetAnalogOutputVoltage" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal OutputNumber As UShort, ByVal VoltageValue As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetAnalogOutputState Lib "EposCmd64.dll" Alias "VCS_SetAnalogOutputState" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal Configuration As UShort, ByVal StateValue As Integer, ByRef pErrorCode As UInteger) As Integer

'Position Compare
Declare Function VCS_SetPositionCompareParameter Lib "EposCmd64.dll" Alias "VCS_SetPositionCompareParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal OperationalMode As Byte, ByVal IntervalMode As Byte, ByVal DirectionDependency As Byte, ByVal IntervalWidth As UShort, ByVal IntervalRepetitions As UShort, ByVal PulseWidth As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetPositionCompareParameter Lib "EposCmd64.dll" Alias "VCS_GetPositionCompareParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pOperationalMode As Byte, ByRef pIntervalMode As Byte, ByRef pDirectionDependency As Byte, ByRef pIntervalWidth As UShort, ByRef pIntervalRepetitions As UShort, ByRef pPulseWidth As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_ActivatePositionCompare Lib "EposCmd64.dll" Alias "VCS_ActivatePositionCompare" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal DigitalOutputNumber As UShort, ByVal Polarity As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_DeactivatePositionCompare Lib "EposCmd64.dll" Alias "VCS_DeactivatePositionCompare" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal DigitalOutputNumber As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_EnablePositionCompare Lib "EposCmd64.dll" Alias "VCS_EnablePositionCompare" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_DisablePositionCompare Lib "EposCmd64.dll" Alias "VCS_DisablePositionCompare" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_SetPositionCompareReferencePosition Lib "EposCmd64.dll" Alias "VCS_SetPositionCompareReferencePosition" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ReferencePosition As Integer, ByRef pErrorCode As UInteger) As Integer

'Position Marker
Declare Function VCS_SetPositionMarkerParameter Lib "EposCmd64.dll" Alias "VCS_SetPositionMarkerParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal PositionMarkerEdgeType As Byte, ByVal PositionMarkerMode As Byte, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetPositionMarkerParameter Lib "EposCmd64.dll" Alias "VCS_GetPositionMarkerParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pPositionMarkerEdgeType As Byte, ByRef pPositionMarkerMode As Byte, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_ActivatePositionMarker Lib "EposCmd64.dll" Alias "VCS_ActivatePositionMarker" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal DigitalInputNumber As UShort, ByVal Polarity As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_DeactivatePositionMarker Lib "EposCmd64.dll" Alias "VCS_DeactivatePositionMarker" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal DigitalInputNumber As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_ReadPositionMarkerCounter Lib "EposCmd64.dll" Alias "VCS_ReadPositionMarkerCounter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pCount As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_ReadPositionMarkerCapturedPosition Lib "EposCmd64.dll" Alias "VCS_ReadPositionMarkerCapturedPosition" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal CounterIndex As UShort, ByRef pCapturedPosition As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_ResetPositionMarkerCounter Lib "EposCmd64.dll" Alias "VCS_ResetPositionMarkerCounter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer

'*************************************************************************************************************************************
' DATA RECORDING FUNCTIONS
'************************************************************************************************************************************/

'DataRecorder Setup
Declare Function VCS_SetRecorderParameter Lib "EposCmd64.dll" Alias "VCS_SetRecorderParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal SamplingPeriod As UShort, ByVal NbOfPrecedingSamples As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_GetRecorderParameter Lib "EposCmd64.dll" Alias "VCS_GetRecorderParameter" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pSamplingPeriod As UShort, ByRef pNbOfPrecedingSamples As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_EnableTrigger Lib "EposCmd64.dll" Alias "VCS_EnableTrigger" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal TriggerType As Byte, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_DisableAllTriggers Lib "EposCmd64.dll" Alias "VCS_DisableAllTriggers" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_ActivateChannel Lib "EposCmd64.dll" Alias "VCS_ActivateChannel" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ChannelNumber As Byte, ByVal ObjectIndex As UShort, ByVal ObjectSubIndex As Byte, ByVal ObjectSize As Byte, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_DeactivateAllChannels Lib "EposCmd64.dll" Alias "VCS_DeactivateAllChannels" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer

'DataRecorder Status
Declare Function VCS_StartRecorder Lib "EposCmd64.dll" Alias "VCS_StartRecorder" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_StopRecorder Lib "EposCmd64.dll" Alias "VCS_StopRecorder" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_ForceTrigger Lib "EposCmd64.dll" Alias "VCS_ForceTrigger" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_IsRecorderRunning Lib "EposCmd64.dll" Alias "VCS_IsRecorderRunning" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pRunning As Integer, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_IsRecorderTriggered Lib "EposCmd64.dll" Alias "VCS_IsRecorderTriggered" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pTriggered As Integer, ByRef pErrorCode As UInteger) As Integer

'DataRecorder Data
Declare Function VCS_ReadChannelVectorSize Lib "EposCmd64.dll" Alias "VCS_ReadChannelVectorSize" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pVectorSize As UInteger, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_ReadChannelDataVector Lib "EposCmd64.dll" Alias "VCS_ReadChannelDataVector" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal ChannelNumber As Byte, ByRef pDataVectorBuffer_FirstElement As Byte, ByVal VectorBufferSize As UInteger, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_ShowChannelDataDlg Lib "EposCmd64.dll" Alias "VCS_ShowChannelDataDlg" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByRef pErrorCode As UInteger) As Integer
Declare Function VCS_ExportChannelDataToFile Lib "EposCmd64.dll" Alias "VCS_ExportChannelDataToFile" (ByVal KeyHandle As Integer, ByVal NodeID As UShort, ByVal FileName As String, ByRef pErrorCode As UInteger) As Integer
